--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
         </div>
 
         <div class="form-input">
-          <label for="apellido">Apellido:</label>
-          <input type="text" name="apellido" required placeholder="Ingrese su apellido" />
+          <label for="primerapellido">primerApellido:</label>
+          <input type="text" name="primer_apellido" required placeholder="Ingrese su primer apellido" />
+        </div>
+        <div class="form-input">
+          <label for="segundoapellido">SegundoApellido:</label>
+          <input type="text" name="segundo_apellido" required placeholder="Ingrese su segundo apellido" />
         </div>
 
         <div class="form-input">
